# fym-neupic-api

./: .env.dev  .env.prod.sample  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
api_v1/: serializers.py  services.py  urls.py  views.py
app/api/: pagination.py  services.py  urls.py  views.py
app/config/: celery.py  settings.py  urls.py
app/tasks/: managers.py  models.py  tasks.py
app/tasks/migrations/: 0001_initial.py  0002_alter_media_type.py  0003_auto_20210530_1801.py  0004_alter_media_type.py  0005_alter_media_preview.py  0007_auto_20210616_1825.py
config/: settings.prod.py  settings.py  urls.py
docker/dev/: .env.sample
docker/dev/django/: Dockerfile
docker/prod/: .env.prod  .env.prod.sample  .env.sample
docker/prod/django/: Dockerfile
docker/prod/nginx/: Dockerfile  neupic_api.conf  neupic_api.sample.conf
docker/prod/nginx/vhost.d/: default
docker/prod/postgres/: Dockerfile  init.sql.sample
nginx/: default.conf
tasks/: admin.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_media_tags.py  0002_alter_taskdata_subfunction.py  0002_auto_20210513_1523.py  0003_auto_20210516_0502.py  0003_media_tags.py  0004_alter_media_state.py  0004_auto_20210515_0729.py  0006_config.py
