[tool.poetry]
name = "fym-neupic-queue"
version = "0.1.0"
description = ""
authors = ["Alex Malykh <alexeyheather@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
djangorestframework = "^3.12.4"
Pillow = "^8.2.0"
drf-yasg = "^1.20.0"
celery = {extras = ["redis"], version = "^5.0.5"}
djangorestframework-simplejwt = "^4.6.0"
django-filter = "^2.4.0"
django-taggit = "^1.4.0"
django-taggit-serializer = "^0.1.7"
redis = "^3.5.3"
psycopg2-binary = "^2.8.6"
gunicorn = "^20.1.0"
django-cleanup = "^5.2.0"
django-redis = "^5.0.0"
sentry-sdk = "^1.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
